@@ -70,7 +70,7 @@
           </item>
           <item>
            <property name="text" >
-            <string>Bond length</string>
+            <string>Distance</string>
            </property>
           </item>
           <item>
